baml_language/crates/baml_tests/snapshots/compiles/backtick_dedent/baml_tests__compiles__backtick_dedent__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
function user.FarIndented() -> string  [expr] {
  {  } `...`
}
function user.FirstLineFlush() -> string  [expr] {
  {  } `...`
}
function user.ForLoopVerbatim(xs: string[]) -> string  [expr] {
  {  } `...`
}
function user.MultilineInterpVerbatim() -> string  [expr] {
  {  } `...`
}
function user.Ragged() -> string  [expr] {
  {  } `...`
}
function user.WithBlankLines() -> string  [expr] {
  {  } `...`
}
function user.WithInterps(name: string, count: int) -> string  [expr] {
  {  } `...`
}
