baml_language/crates/baml_tests/snapshots/compiles/backtick_dedent/baml_tests__compiles__backtick_dedent__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 5660
---
=== MIR2 ===
fn user.FarIndented() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "deeply\npushed in";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.FirstLineFlush() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "first\n          nested under first";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ForLoopVerbatim(xs: string[]) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string[] // xs // param
    let _2: string //  __m3_for
    let _3: baml.iter.Iterator<Error = never, Item = string>
    let _4: unknown
    let _5: bool
    let _6: string
    let _7: string // x
    let _8: string
    let _9: string
    let _10: string
    let _11: string
    let _12: string
    let _13: type

    bb0: {
        _2 = const "";
        _3 = virtual_call iter as baml.iter.Iterable<Item = string, Error = never>(copy _1) -> [bb1];
    }

    bb1: {
        _4 = virtual_call next as baml.iter.Iterator<Item = string, Error = never>(copy _3) -> [bb2];
    }

    bb2: {
        _5 = is_type(copy _4, baml.iter.Done);
        branch copy _5 -> [bb5, bb3];
    }

    bb3: {
        _6 = copy _4;
        fresh_cell(_7);
        _7 = copy _6;
        _8 = copy _2;
        _12 = copy _7;
        _13 = load_type(string);
        _11 = call const fn baml.String.from<copy _13>(copy _12) -> [bb4];
    }

    bb4: {
        _10 = const "- " + copy _11;
        _9 = copy _10 + const "\n";
        _2 = copy _8 + copy _9;
        goto -> bb1;
    }

    bb5: {
        _0 = copy _2;
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.MultilineInterpVerbatim() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string
    let _2: type

    bb0: {
        _2 = load_type(string);
        _1 = call const fn baml.String.from<copy _2>(const "x") -> [bb1];
    }

    bb1: {
        _0 = const "value: " + copy _1;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.Ragged() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "header\n    bullet one\n    bullet two\nfooter";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.WithBlankLines() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "para one\n\npara two";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.WithInterps(name: string, count: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // name // param
    let _2: int // count // param
    let _3: string
    let _4: string
    let _5: string
    let _6: type
    let _7: string
    let _8: type

    bb0: {
        _6 = load_type(string);
        _5 = call const fn baml.String.from<copy _6>(copy _1) -> [bb1];
    }

    bb1: {
        _4 = const "name:  " + copy _5;
        _3 = copy _4 + const "\ncount: ";
        _8 = load_type(int);
        _7 = call const fn baml.String.from<copy _8>(copy _2) -> [bb2];
    }

    bb2: {
        _0 = copy _3 + copy _7;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}
