baml_language/crates/baml_tests/snapshots/compiles/backtick_dedent/baml_tests__compiles__backtick_dedent__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.FarIndented() -> string throws never {
  { : "deeply\npushed in"
    `...` : "deeply\npushed in"
  }
}
function user.Ragged() -> string throws never {
  { : "header\n    bullet one\n    bullet two\nfooter"
    `...` : "header\n    bullet one\n    bullet two\nfooter"
  }
}
function user.WithBlankLines() -> string throws never {
  { : "para one\n\npara two"
    `...` : "para one\n\npara two"
  }
}
function user.WithInterps(name: string, count: int) -> string throws never {
  { : string
    `...` : string
  }
}
function user.FirstLineFlush() -> string throws never {
  { : "first\n          nested under first"
    `...` : "first\n          nested under first"
  }
}
function user.ForLoopVerbatim(xs: string[]) -> string throws never {
  { : string
    `...` : string
  }
}
function user.MultilineInterpVerbatim() -> string throws never {
  { : string
    `...` : string
  }
}
